--- a/css/style.css
+++ b/css/style.css
@@ -256,11 +256,11 @@ color: var(--secondary-color);
 .services .services-content .image::before {
   content: "";
   background: transparent;
-  width: 80% ;
+  width: 100% ;
   height: calc(100% + 100px);
   top: -50px;
-  position: absolute;
-  right: 40px;
+  position: fixed;
+  right: 0;
   z-index: -1;
   box-shadow: 
   2px 2px 10px var(--secondary-color),
