--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ color: var(--secondary-color);
   width: 100% ;
   height: calc(100% + 100px);
   top: -50px;
-  position: fixed;
+  position: absolute;
   right: 0;
   z-index: -1;
   box-shadow: 
