--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,7 @@ footer .container{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
     gap: 20px;
   }
 }
